--- a/acloudstore/src/main/res/layout/fragment_acloud_store_main.xml
+++ b/acloudstore/src/main/res/layout/fragment_acloud_store_main.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:labelFor="@string/app_name">
 
     <TextView
         android:id="@+id/section_label"
@@ -45,7 +46,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
-                        android:text="@string/gamelevel"
                         android:ems="10"
                         android:id="@+id/gamelevel"
                         android:layout_gravity="left|bottom" />
@@ -66,7 +66,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
-                        android:text="@string/points"
                         android:ems="10"
                         android:id="@+id/points"
                         android:layout_gravity="left|bottom" />
@@ -87,7 +86,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
-                        android:text="@string/nickname"
                         android:ems="10"
                         android:id="@+id/nickname"
                         android:layout_gravity="left|bottom" />
@@ -108,15 +106,40 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:inputType="textEmailAddress"
-                        android:text="@string/email"
                         android:ems="10"
                         android:id="@+id/email"
                         android:layout_gravity="left|bottom" />
                 </TableRow>
 
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"></TableRow>
+
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"></TableRow>
+
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"></TableRow>
+
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="New Button"
+                        android:id="@+id/button"
+                        android:layout_column="1" />
+                </TableRow>
+
 
             </TableLayout>
         </LinearLayout>
+
+
     </FrameLayout>
 
 </RelativeLayout>
