--- a/acloudstore/src/main/res/layout/fragment_acloud_store_main.xml
+++ b/acloudstore/src/main/res/layout/fragment_acloud_store_main.xml
@@ -35,6 +35,19 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
 
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Load from cloud"
+                        android:id="@+id/loadFromCloud"
+                        android:layout_column="1" />
+                </TableRow>
+
+
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
